# REDCAT

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README  temp2.redcat
Misc/: SPARKY.txt  redcraft.schema
data/: 1a1z.rdc.1  1a1z.rdc.2  1a1z.redcat  RDC.in  SPARKY.txt  states.in
scripts/: Gnu3DInt.tcl  GnuInt.tcl  MakeREDCAT.prl  MakeREDCAT_chain.prl  MakeRedcat.tcl  MakeXplor.prl  REDCAT.tcl  Rotate_PDB.tcl  convert.prl  createRedcatFile.py  pkgIndex.tcl  xreader.prl
src/: Dynamic.cpp  Redcat.cpp  Redcat.h  SVDiface.cpp  SVDiface.h  main.cpp  matrix.cpp  matrix.h  shell.cpp  tensor.cpp  tensor.h
vmd/: INSTALL-VMDREDCAT  vmdREDCAT.tcl
